--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,26 +1,29 @@
-body{
+body {
 	background: #ccc;
 	font-size: 1em;
 	font-family: arial;
 }
-header{
+
+header {
 	margin: 0;
-	background: #2E2EFE;	
-	color:#FE2E2E;
-	text-align: center; ;
+	background: #2E2EFE;
+	color: #FE2E2E;
+	text-align: center;
 	position: 1em 0;
 	border-bottom: 5px solid #000;
-
 }
-nav{
+
+nav {
 	text-align: center;
 	margin-top: 0.7em;
 }
-nav li{
+
+nav li {
 	display: inline-block;
 	list-style: none;
 }
-nav li a{
+
+nav li a {
 	text-decoration: none;
 	background: #0489B1;
 	color: #fff;
@@ -28,6 +31,7 @@ nav li a{
 	padding: 0.6em 0.3em;
 	box-shadow: 5px 5px 5px #333;
 }
+
 nav li a:hover {
 	text-decoration: none;
 	background: #AAE9F8;
@@ -35,17 +39,19 @@ nav li a:hover {
 	border-radius: 3px;
 	padding: 0.6em 0.3em;
 }
-footer{
+
+footer {
 	border-top: 3px solid #000;
 	background: #848484;
-	color:#FF0000;
+	color: #FF0000;
 	text-align: center;
 	font-size: 0.7em;
 	padding: 1em 0;
 }
-section#contenido{
+
+section#contenido {
 	background: #fff;
-	padding: 1em ;
+	padding: 1em;
 	margin: 2em auto;
 	width: 80%;
 }
